@@ -14,6 +14,7 @@ dgm-lib v3.0.0
         * Two moves are issued per resource load, but that's a price I am willing to pay for RAII
     * All `dgm::Utility::load*` functions have been adjusted
     * `dgm::ParticleSystemInterface` is now explicit
+ * Previously deprecated default constructors were removed (`dgm::Clip`, `dgm::TileMap`, `dgm::Path`)
 
 dgm-lib v2.x.x
  * `dgm::Animation::getSpeed` was marked as noexcept
